modified initial page

--- a/QueueCheckWeb/views/index.ejs
+++ b/QueueCheckWeb/views/index.ejs
@@ -2,10 +2,13 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Hello World</title>
+    <title>QueueCheck</title>
 </head>
 
 <body>
-    <h1>Hello</h1>
+    <h1>QueueCheck</h1>
+    <a href="/login">Login</a>
+    <br>
+    <a href="/register">Register</a>
 </body>
 </html>
