--- a/QueueCheckWeb/views/home.pug
+++ b/QueueCheckWeb/views/home.pug
@@ -9,14 +9,28 @@ html
             }
     body
         h1 Home Page
+        ul
+            each loc in coordMaps
+                li=loc.name
+                ul
+                    li=loc.coord.lat
+                    li=loc.coord.lon
+        p(id="naDescrip")=naDescrip
+        p(id="wvDescrip")=wvDescrip
+        p(id="libDescrip")=libDescrip
+
         div(id="map")
-        script(src="https://maps.googleapis.com/maps/api/js?key=AIzaSyARsNpnQRNR3hmJphz_FOSiMyU33ScK69M&callback=initMap&libraries=&v=weekly" async)
+        script(async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyARsNpnQRNR3hmJphz_FOSiMyU33ScK69M&callback=initMap&libraries=&v=weekly")
         script.
             const locations = [
                 { lat: 33.7804494335901, lng: -84.4049251642794 },
                 { lat: 33.774241092779, lng: -84.3951471683685 },
                 { lat: 33.7710653643324, lng: -84.3915450543985 }
             ]
+
+            const naDescrip = document.getElementById("naDescrip").textContent
+            const wvDescrip = document.getElementById("wvDescrip").textContent
+            const libDescrip = document.getElementById("libDescrip").textContent
 
             function initMap() {
                 const gt = { lat: 33.7756, lng: -84.3963}
@@ -25,24 +39,32 @@ html
                     center: gt
                 })
 
-                const contentString =
-                    '<div>' +
-                        '<h1>West Village Starbucks</h1>' +
-                        '<div>' +
-                            '<p>West Village Starbucks, located in the West Village Dining Commons.</p>' +
-                        '</div>' +
-                    '</div>'
-                const infowindow = new google.maps.InfoWindow({
-                    content: contentString,
-                });
-
                 const markers = locations.map((location, i) => {
                     return new google.maps.Marker({
                         position: location,
                         map: map
                     })
                 })
+
+                let iw = new google.maps.InfoWindow({
+                    content: wvDescrip,
+                });
                 markers[0].addListener("click", () => {
-                    infowindow.open(map, markers[0])
+                    iw.open(map, markers[0])
                 })
+                ////////////////
+                let iw1 = new google.maps.InfoWindow({
+                    content: libDescrip,
+                });
+                markers[1].addListener("click", () => {
+                    iw1.open(map, markers[1])
+                })
+                ///////////////
+                let iw2 = new google.maps.InfoWindow({
+                    content: naDescrip,
+                });
+                markers[2].addListener("click", () => {
+                    iw2.open(map, markers[2])
+                })
+
             }
